Lista de deseos
se corrigio la logica de la lista de deseos